; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regproc.c_REGPROC_write_line.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regproc.c_REGPROC_write_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i64)* @REGPROC_write_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @REGPROC_write_line(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @lstrlenW(i32* %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @fwrite(i32* %11, i32 4, i32 %13, i32* %14)
  br label %25

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = call i8* @GetMultiByteString(i32* %17)
  store i8* %18, i8** %7, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @fputs(i8* %19, i32* %20)
  %22 = call i32 (...) @GetProcessHeap()
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @HeapFree(i32 %22, i32 0, i8* %23)
  br label %25

25:                                               ; preds = %16, %10
  ret void
}

declare dso_local i32 @fwrite(i32*, i32, i32, i32*) #1

declare dso_local i32 @lstrlenW(i32*) #1

declare dso_local i8* @GetMultiByteString(i32*) #1

declare dso_local i32 @fputs(i8*, i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i8*) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
